# trial-search

./: .gitignore  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml
.github/workflows/: docker-image.yml  ghcr-publish.yml  publish-images.yml
backend/: Dockerfile  app.py  download_database.py  pyproject.toml
backend/app/: routes.py
backend/scripts/: query_chromadb.py  update_chromadb.py
frontend/: .prettierrc  Dockerfile  Dockerfile.dev  Dockerfile.prod  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/components/: SearchBar.jsx  Trial.jsx
frontend/src/routes/: About.jsx  AboutPage.jsx  ErrorPage.jsx  HomePage.jsx  SearchPage.jsx  TrialPage.jsx  root.jsx
ssl/: README.md
update_db/: Dockerfile  requirements.txt  update_db.py
