[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for clinical trial semantic search."
authors = ["wuihee <wuihee@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
tqdm = "^4.66.5"
gunicorn = "^23.0.0"
chromadb = "^0.5.5"
flask = "^3.0.3"
sentence-transformers = "^3.0.1"
flask-cors = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
